@@ -2,12 +2,12 @@
 
 exports[`AccountFees renders discounted base fee 1`] = `
 <div>
-  <p>
-    <s>
-      2.9% + $0.30 per transaction
-    </s>
-     2.0% + $0.20 per transaction
-  </p>
+  United States (US) dollar 
+  (USD) 
+  <s>
+    2.9% + $0.30 per transaction
+  </s>
+   2.0% + $0.20 per transaction
   <div
     class="progressbar"
   >
@@ -49,12 +49,12 @@ exports[`AccountFees renders discounted base fee 1`] = `
 
 exports[`AccountFees renders discounted fee with end date 1`] = `
 <div>
-  <p>
-    <s>
-      2.9% + $0.30 per transaction
-    </s>
-     2.0% + $0.21 per transaction (30% discount)
-  </p>
+  United States (US) dollar 
+  (USD) 
+  <s>
+    2.9% + $0.30 per transaction
+  </s>
+   2.0% + $0.21 per transaction (30% discount)
   <p
     class="description"
   >
@@ -74,12 +74,12 @@ exports[`AccountFees renders discounted fee with end date 1`] = `
 
 exports[`AccountFees renders discounted fee with volume limit 1`] = `
 <div>
-  <p>
-    <s>
-      2.9% + $0.30 per transaction
-    </s>
-     2.0% + $0.21 per transaction (30% discount)
-  </p>
+  United States (US) dollar 
+  (USD) 
+  <s>
+    2.9% + $0.30 per transaction
+  </s>
+   2.0% + $0.21 per transaction (30% discount)
   <div
     class="progressbar"
   >
@@ -121,12 +121,12 @@ exports[`AccountFees renders discounted fee with volume limit 1`] = `
 
 exports[`AccountFees renders discounted fee with volume limit and end date 1`] = `
 <div>
-  <p>
-    <s>
-      2.9% + $0.30 per transaction
-    </s>
-     2.0% + $0.21 per transaction (30% discount)
-  </p>
+  United States (US) dollar 
+  (USD) 
+  <s>
+    2.9% + $0.30 per transaction
+  </s>
+   2.0% + $0.21 per transaction (30% discount)
   <div
     class="progressbar"
   >
@@ -168,12 +168,12 @@ exports[`AccountFees renders discounted fee with volume limit and end date 1`] =
 
 exports[`AccountFees renders discounted fee without volume limit 1`] = `
 <div>
-  <p>
-    <s>
-      2.9% + $0.30 per transaction
-    </s>
-     2.0% + $0.21 per transaction (30% discount)
-  </p>
+  United States (US) dollar 
+  (USD) 
+  <s>
+    2.9% + $0.30 per transaction
+  </s>
+   2.0% + $0.21 per transaction (30% discount)
   <p>
     <a
       href="https://woocommerce.com/terms-conditions/woocommerce-payments-promotion/"
@@ -188,12 +188,12 @@ exports[`AccountFees renders discounted fee without volume limit 1`] = `
 
 exports[`AccountFees renders discounted non-USD base fee 1`] = `
 <div>
-  <p>
-    <s>
-      1.4% + £0.20 per transaction
-    </s>
-     0.7% + £0.10 per transaction
-  </p>
+  Pound sterling 
+  (GBP) 
+  <s>
+    1.4% + £0.20 per transaction
+  </s>
+   0.7% + £0.10 per transaction
   <div
     class="progressbar"
   >
@@ -207,19 +207,19 @@ exports[`AccountFees renders discounted non-USD base fee 1`] = `
       <span
         class="progressbar__outer-progress-label"
       >
-        $12,345.56
+        £12,345.56
       </span>
     </div>
     <span
       class="progressbar__total-label"
     >
-      $1,000,000.00
+      £1,000,000.00
     </span>
   </div>
   <p
     class="description"
   >
-    Discounted base fee expires after the first $1,000,000.00 of total payment volume.
+    Discounted base fee expires after the first £1,000,000.00 of total payment volume.
   </p>
   <p>
     <a
@@ -235,12 +235,12 @@ exports[`AccountFees renders discounted non-USD base fee 1`] = `
 
 exports[`AccountFees renders first discounted fee ignoring the rest 1`] = `
 <div>
-  <p>
-    <s>
-      2.9% + $0.30 per transaction
-    </s>
-     2.3% + $0.24 per transaction (20% discount)
-  </p>
+  United States (US) dollar 
+  (USD) 
+  <s>
+    2.9% + $0.30 per transaction
+  </s>
+   2.3% + $0.24 per transaction (20% discount)
   <p>
     <a
       href="https://woocommerce.com/terms-conditions/woocommerce-payments-promotion/"
@@ -255,9 +255,9 @@ exports[`AccountFees renders first discounted fee ignoring the rest 1`] = `
 
 exports[`AccountFees renders non-USD base fee 1`] = `
 <div>
-  <p>
-    2.9% + €0,25 per transaction
-  </p>
+  Euro 
+  (EUR) 
+  2.9% + €0,25 per transaction
   <p>
     <a
       href="https://docs.woocommerce.com/document/payments/faq/fees/"
@@ -272,9 +272,9 @@ exports[`AccountFees renders non-USD base fee 1`] = `
 
 exports[`AccountFees renders normal base fee 1`] = `
 <div>
-  <p>
-    2.9% + $0.30 per transaction
-  </p>
+  United States (US) dollar 
+  (USD) 
+  2.9% + $0.30 per transaction
   <p>
     <a
       href="https://docs.woocommerce.com/document/payments/faq/fees/"
